--- a/packages/client/web/package.json
+++ b/packages/client/web/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.44"
+    "@types/react": "^16.9.44",
+    "@types/styled-components": "^5.1.2"
   }
 }
