--- a/packages/server/api/package.json
+++ b/packages/server/api/package.json
@@ -26,6 +26,8 @@
     "helmet": "^4.0.0",
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.3.0"
   }
 }
