--- a/packages/server/api/package.json
+++ b/packages/server/api/package.json
@@ -11,6 +11,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/helmet": "^0.0.47",
+    "@types/jest": "^26.0.8",
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
@@ -24,6 +25,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.0.0",
+    "jest": "^26.2.2",
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
