--- a/packages/server/api/package.json
+++ b/packages/server/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --no-notify src/shared/infra/http/server.ts"
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --no-notify src/shared/infra/http/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
@@ -15,8 +16,10 @@
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
+    "sqlite3": "^5.0.0",
     "ts-node-dev": "^1.0.0-pre.56",
     "tsconfig-paths": "^3.9.0",
+    "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^3.9.7"
   },
   "dependencies": {
