--- a/packages/server/api/package.json
+++ b/packages/server/api/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules --respawn --no-notify src/shared/infra/http/server.ts",
-    "test": "jest"
+    "test": "jest --silent"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
