--- a/packages/client/web/package.json
+++ b/packages/client/web/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/styled-components": "^5.1.2",
     "babel-plugin-styled-components": "^1.11.1"
